2009-09-23  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-art.el (gnus-article-encrypt-body):
	* message.el (message-check-recipients):
	* mm-util.el (mm-codepage-setup):
	* nnir.el (gnus-summary-nnir-goto-thread, nnir-run-waissearch)
	(nnir-run-swish++, nnir-run-swish-e): Fix typos in error messages.

2009-09-22  Daiki Ueno  <ueno@unixuser.org>

	* mm-encode.el (mm-sign-option, mm-encrypt-option): New user option.
	* mml2015.el (mml2015-epg-sign, mml2015-epg-encrypt): Let users select
	keys from the menu if mm-{sign,encrypt}-option is 'guided.
	* mml-smime.el (mml-smime-epg-sign, mml-smime-epg-encrypt): Ditto.
	* mml1991.el (mml1991-epg-sign, mml1991-epg-encrypt): Ditto.

2009-09-18  Glenn Morris  <rgm@gnu.org>

	* gnus-diary.el (gnus-diary-check-message):
	* message.el (message-insert-formatted-citation-line):
	* nnbabyl.el (top-level):
	* nndiary.el (nndiary-schedule):
	Fix typos in condition-case handlers.

2009-09-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-edit-part): Work for the buffer
	configuration that provides the sole article window in a frame;
	position point correctly after deleting a part.

2009-09-14  Adam Sjøgren  <asjo@koldfront.dk>

	* spam.el (spam-unregister-on-reregister): Add boolean variable.
	(spam-resolve-registrations-routine): Use it to unregister articles
	that change status.

2009-09-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnrss.el (nnrss-request-article): Remove binding of
	default-enable-multibyte-characters that has gotten needless by
	the 2007-07-13 change in rfc2047-encode-message-header.

	* mml.el (mml-insert-multipart): Error on the message header.
	(mml-insert-part): Error on the message header; position point at
	the end of a MIME tag.

2009-09-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (with-no-warnings): Define it for old Emacsen.
	(gnus-float-time): Alias to float-time if it exists.

	* ecomplete.el (with-no-warnings): Define it for old Emacsen.